--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
     <script src='/scripts/componentGenerator.js'></script>
-    <script src='/scripts/dataUris.js'></script>
+    <script src='/scripts/imageGenerator.js'></script>
     <script src='/scripts/socket.js'></script>
     <script src='/scripts/train.js'></script>
     <script src='/scripts/predict.js'></script>
